# ros-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
ros_api/: __init__.py  cli.py  client.py  config.py  formatter.py  skill_install.py
ros_api/skills/: __init__.py  claude_agents.md  codex_skill.md  cursor_skill.md  openclaw_skill.md  shared_skill_body.md
scripts/: install_skills.py  quick_install.py  render_skill_templates.py
