[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ros-cli"
version = "0.1.0"
description = "CLI tool for ros-api academic resource query service"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "rich>=13.0",
]

[project.scripts]
ros = "ros_api.cli:main"

[tool.setuptools.packages.find]
include = ["ros_api*"]
